# mimisight

./: LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: app.yaml  backend.yaml
app/: README.md  app.json  biome.json  package.json  pnpm-lock.yaml  pubspec.yaml
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/com/example/mimisight_flutter/: MainActivity.kt
app/app/(tabs)/: index.tsx
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/components/: collapsible.dart  themed_text.dart
app/lib/screens/: home_screen.dart
app/lib/services/: gemini_service.dart
app/linux/: CMakeLists.txt
app/linux/runner/: my_application.cc
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
app/macos/Runner/Configs/: AppInfo.xcconfig
app/test/: widget_test.dart
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
app/windows/runner/: Runner.rc  main.cpp
backend/: .dockerignore  .gitignore  README.md  compose.yaml  dev.Dockerfile  prod.Dockerfile  pyproject.toml
backend/src/: main.py
backend/src/api/: routes.py
backend/src/schemas/: message.py  request_models.py
backend/src/services/: gemini_client.py  live_text_client.py
